2007-10-29  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Bumped to version 1.1.1.

2007-10-12  Eitan Isaacson  <eitan@ascender.com>

	* README: 
	* configure.in: 
	* debian/changelog: Bumped to 1.0.2.

	* NEWS: Updated to 1.0.1.

	* src/lib/accerciser/accerciser.py: Removed _onAccChanged
	callback, and put in a more general selection changed callback in
	main_window.py (bug #484843).
	* src/lib/accerciser/main_window.py: Put in a selection changed
	callback to update the status bar with the current path (bug #484843).
	* src/lib/accerciser/plugin/message.py: Fixed tooltip style issue
	(bug #460071).
	* src/lib/accerciser/prefs_dialog.py: Fixed bug that would not
	alow preferences window to be closed (bug #481176).

2007-10-05  Eitan Isaacson  <eitan@ascender.com>

	* configure.in:
	* README: Changed to version 1.0.1
	* help/C/accerciser.xml: Fixed bad entity name (bug
	#475593). Thanks Frederic Peters!

2007-09-17  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/node.py (Node.update): Assert that a
	Component interface is actually given before trying to use it.
	* README: Bumped to version 1.1.0 for GNOME 2.21 development
	cycle.
	* configure.in: Bumped to version 1.1.0 for GNOME 2.21 development
	cycle.

2007-09-16  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Updated to version 1.0.0.

2007-09-15  Eitan Isaacson  <eitan@ascender.com>

	* src/lib/accerciser/pyatspi.zip: Updated to latest pyatspi revision.
	These are updates from bugs #472301 and #467366.

2007-09-04  Eitan Isaacson  <eitan@ascender.com>

	* NEWS: 
	* README: 
	* configure.in: 
	* debian/changelog: Changed to version 0.1.92.

2007-08-31  Eitan Isaacson  <eitan@ascender.com>

	* MAINTAINERS: Updated to new format.

2007-08-30  Eitan Isaacson  <eitan@ascender.com>

	* plugins/interface_view.glade: 
	* plugins/script_recorder.glade: Added translation comments 